US402 fixed qv printing overflow cutoff

--- a/app/scss/calendar/quickview/_quickView.scss
+++ b/app/scss/calendar/quickview/_quickView.scss
@@ -418,6 +418,12 @@ input[disabled='disabled']
         box-shadow:none;
     }
 
+    #workOutQuickView
+    {
+        overflow-y: visible;
+        height: auto;
+    }
+
     .workoutQuickView {
         top:0 !important;
         left:0 !important;
@@ -434,6 +440,12 @@ input[disabled='disabled']
 
         .tabNavigation, .closeAndSettings, .uploadExpandButtons, .headerIcons, .quickviewFooter {
             display:none;
+        }
+        
+        .tabContent
+        {
+            overflow-x: hidden;
+            overflow-y: visible;
         }
 
         .QVHeader {
@@ -497,7 +509,7 @@ input[disabled='disabled']
         #quickViewContent {
             background:none;
             width:100%;
-            height:750px;
+            height:1200px;
             overflow-y:visible;
             float:left;
             margin:10px 0;
@@ -506,13 +518,13 @@ input[disabled='disabled']
 
             #quickViewSummaryTab {
 
-                height:750px;
+                height:1200px;
                 overflow-y:visible !important;
                 // border:1px solid green;
 
                 .summary {
 
-                    height:750px;
+                    height:1200px;
                     // border:1px solid blue;
 
                     .stats {
@@ -574,3 +586,5 @@ input[disabled='disabled']
         }
     }
 }
+
+
